--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.github.faruktoptas:FancyShowCaseView:0.1.1'
     testCompile 'junit:junit:4.12'
 }
