--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.luciano.chanchuno">
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/icons8_pig_96"
         android:label="@string/app_name"
         android:roundIcon="@drawable/icons8_pig_96"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".SplashActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme"
+        >
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,11 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".partida"
-            android:label="@string/partida"
             android:screenOrientation="portrait"
             />
         <activity android:name=".MainActivity"
-            android:label="@string/mainAct"
             android:screenOrientation="portrait"
             />
     </application>
