--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.luciano.chanchuno">
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icons8_pig_96"
         android:label="@string/app_name"
         android:roundIcon="@drawable/icons8_pig_96"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,13 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".partida"
-            android:screenOrientation="portrait"
-
-            />
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            />
+        <activity
+            android:name=".partida"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".comoJugar" />
+        <activity android:name=".quienesSomos"></activity>
     </application>
 
 </manifest>
