--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.github.faruktoptas:FancyShowCaseView:1.0.1'
     testCompile 'junit:junit:4.12'
+
+    implementation 'com.google.android.gms:play-services-ads:17.1.1'
+
+    implementation 'com.google.firebase:firebase-core:16.0.5'
+
 }
