--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.luciano.chanchuno">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icons8_pig_96"
@@ -24,6 +26,10 @@
             android:screenOrientation="portrait" />
         <activity android:name=".comoJugar" />
         <activity android:name=".quienesSomos"></activity>
+        <!-- Sample AdMob App ID: ca-app-pub-6353529381545594~4437099656-->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-6353529381545594~4437099656"/>
     </application>
 
 </manifest>
