--- a/chanchuno/build.gradle
+++ b/chanchuno/build.gradle
@@ -8,8 +8,8 @@ android {
         minSdkVersion 23
         //noinspection EditedTargetSdkVersion
         targetSdkVersion 35
-        versionCode 8
-        versionName "1.9"
+        versionCode 11
+        versionName "0.0.1-reinicio"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
@@ -43,8 +43,21 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.faruktoptas:FancyShowCaseView:1.0.1'
     testImplementation 'junit:junit:4.13.2'
-    implementation 'com.google.android.gms:play-services-ads:24.4.0'
 
     implementation 'com.google.firebase:firebase-core:21.1.1'
 
+    implementation(platform("androidx.compose:compose-bom:2025.06.01"))
+    androidTestImplementation(platform("androidx.compose:compose-bom:2025.06.01"))
+
+    // Choose one of the following:
+    // Material Design 3
+    implementation("androidx.compose.material3:material3")
+
+    // Android Studio Preview support
+    implementation("androidx.compose.ui:ui-tooling-preview")
+    debugImplementation("androidx.compose.ui:ui-tooling")
+
+    // UI Tests
+    androidTestImplementation("androidx.compose.ui:ui-test-junit4")
+    debugImplementation("androidx.compose.ui:ui-test-manifest")
 }
